<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Simple text"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonYes"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="onClick"
            android:text="@string/yes_button" />

        <Button
            android:id="@+id/buttonNo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="onClick"
            android:text="@string/no_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="onClick"
            android:text="@string/next_button" />

        <Button
            android:id="@+id/buttonPrevious"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="onClick"
            android:text="@string/previous_button" />

    </LinearLayout>

</LinearLayout>