<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateQuestionsActivity">

    <TextView
        android:id="@+id/textViewLabelQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:padding="12dp"
        android:text="@string/add_your_question_label"
        android:textSize="24sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextInputQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editTextInputQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/round_style"
        android:backgroundTint="#86BCADAD"
        android:hint="@string/input_your_question_hint"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelQuestion" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInputQuestion">

        <RadioButton
            android:id="@+id/radioButtonTrue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_style"
            android:backgroundTint="@color/dark_pastel_green"
            android:textColor="@color/white"
            android:layout_margin="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/radio_true"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButtonFalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_style"
            android:backgroundTint="@color/crimson"
            android:textColor="@color/white"
            android:layout_margin="8dp"
            android:padding="12dp"
            android:text="@string/radio_false"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSaveQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_question_button"
        android:textColor="@color/white"
        android:padding="20dp"
        android:background="@drawable/round_style"
        android:backgroundTint="@color/deep_purple"
        android:textAllCaps="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>